# HW-1

./: CMakeLists.txt  README.md
.github/workflows/: github_ci.yml
cover-test/: example-html-details.HW-1_project_src_main.c.html  example-html-details.HW-1_project_src_utils.c.html  example-html-details.html
gtests/: gtests.cpp
linters/: run.sh
project/include/: utils.h
project/src/: main.c  utils.c
